echo-ip-freestyle-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-ip-freestyle
  name: echo-ip-freestyle
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-ip-freestyle
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echo-ip-freestyle
    spec:
      containers:
      - image: 192.168.1.10:8443/echo-ip:latest
        name: echo-ip
      readinessProbe:
        failureThreshold: 3
        httpGet:
          path: /
          port: 80
          scheme: HTTP
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 1        
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-ip
  name: lb-echo-ip
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: echo-ip
  type: LoadBalancer
